--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,5 @@ dependencies = [
     "python-docx>=1.2.0",
     "python-dotenv>=1.2.1",
     "requests>=2.32.5",
+    "youtube-transcript-api>=1.2.4",
 ]
