--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "beautifulsoup4>=4.14.3",
     "gradio>=6.6.0",
+    "numpy>=2.4.2",
     "openai>=2.21.0",
     "pypdf>=6.7.1",
     "python-docx>=1.2.0",
