--- a/requirements.txt
+++ b/requirements.txt
@@ -6,20 +6,32 @@ audioop-lts==0.2.2
 beautifulsoup4==4.14.3
 brotli==1.2.0
 certifi==2026.1.4
+cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.1
+cryptography==46.0.5
 defusedxml==0.7.1
 distro==1.9.0
 fastapi==0.129.2
 ffmpy==1.0.0
 filelock==3.24.3
 fsspec==2026.2.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.25.2
+google-api-python-client==2.190.0
+google-auth==2.48.0
+google-auth-httplib2==0.3.0
+google-generativeai==0.8.6
+googleapis-common-protos==1.72.0
 gradio==6.6.0
 gradio-client==2.1.0
 groovy==0.1.2
+grpcio==1.78.0
+grpcio-status==1.71.2
 h11==0.16.0
 hf-xet==1.2.0
 httpcore==1.0.9
+httplib2==0.31.2
 httpx==0.28.1
 huggingface-hub==1.4.1
 idna==3.11
@@ -35,10 +47,16 @@ orjson==3.11.7
 packaging==26.0
 pandas==3.0.1
 pillow==12.1.1
+proto-plus==1.27.1
+protobuf==5.29.6
+pyasn1==0.6.2
+pyasn1-modules==0.4.2
+pycparser==3.0
 pydantic==2.12.5
 pydantic-core==2.41.5
 pydub==0.25.1
 pygments==2.19.2
+pyparsing==3.3.2
 pypdf==6.7.1
 python-dateutil==2.9.0.post0
 python-docx==1.2.0
@@ -48,6 +66,7 @@ pytz==2025.2
 pyyaml==6.0.3
 requests==2.32.5
 rich==14.3.3
+rsa==4.9.1
 safehttpx==0.1.7
 semantic-version==2.10.0
 shellingham==1.5.4
@@ -61,6 +80,7 @@ typer==0.24.1
 typer-slim==0.24.0
 typing-extensions==4.15.0
 typing-inspection==0.4.2
+uritemplate==4.2.0
 urllib3==2.6.3
 uvicorn==0.41.0
 youtube-transcript-api==1.2.4
